# forb

./: .gitignore  CMakeLists.txt  README.md
compiler/: CMakeLists.txt  backup.cpp.bkp  code_ostream.cpp  compiler_main.cpp  example.forb  file_utils.cpp  forb_istreambuf.cpp  forb_istreambuf.h  generator.cpp  interface.cpp  main_compiler.cpp  main_preprocessor.cpp  method.cpp  module.cpp  parameter.cpp  parser.cpp  preprocessor.cpp  preprocessor_main.cpp  prova.cpp  variable.cpp
compiler/include/: code_ostream.hpp  entity.hpp  exception.hpp  file_utils.hpp  forb_istream.hpp  forbcc.hpp  generator.hpp  interface.hpp  method.hpp  module.hpp  ordered_unique_list.hpp  parameter.hpp  parser.hpp  preprocessor.hpp  variable.hpp
compiler/include/templates/: ordered_unique_list.hpp  shareable.hpp
compiler/include/types/: array_type.hpp  custom_type.hpp  module.hpp  primitive_type.hpp  type.hpp  type_array.hpp  type_custom.hpp  type_primitive.hpp  type_struct.hpp
compiler/types/: array_type.cpp  custom_type.cpp  module.cpp  primitive_type.cpp  type.cpp  type_array.cpp  type_custom.cpp  type_primitive.cpp  type_struct.cpp
docs/: CMakeDoxyfile.in  Doxyfile.in
evaluation/results-desktop/: gnuscript.txt
examples/: example_rpc.forb
profiler/: CMakeLists.txt  profiler_class.cpp  profiler_class.forb  profiler_class.hpp  profiler_main.cpp  profiler_main_client.cpp  profiler_main_server.cpp  rpc_db.json
res/: example.forb  rpc_db.json
tests/: CMakeLists.txt  example.forb  example_manual_class.cpp  example_manual_class.hpp  example_manual_main_client.cpp  example_manual_main_server.cpp  main_client_example.cpp  main_server_example.cpp  rpc_class_generated.cpp  rpc_class_generated.hpp  rpc_class_manual.cpp  rpc_class_manual.hpp  rpc_class_manual_example.cpp  rpc_class_manual_example.hpp  rpc_client_gen.cpp  rpc_client_manual.cpp  rpc_db.json  rpc_server_gen.cpp  rpc_server_manual.cpp
